--- a/content/src/content/jcr_root/apps/core/wcm/components/tabs/v1/tabs/clientlibs/site/css/tabs.less
+++ b/content/src/content/jcr_root/apps/core/wcm/components/tabs/v1/tabs/clientlibs/site/css/tabs.less
@@ -21,6 +21,10 @@
     list-style: none;
 }
 
+.cmp-accordion .cmp-tabs__tablist {
+    display: block;
+}
+
 .cmp-tabs__tab {
     box-sizing: border-box;
     border-bottom: 1px solid transparent;
